<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:theme="@style/Theme.MobChat.NoActionBar"
    tools:context=".ui.SecondUserFormScreenFragment">

    <data>
        <variable
            name="viewmodel"
            type="br.felipefcosta.mobchat.presentation.SecondUserFormScreenFragmentViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_weight="8"
            android:text="@string/str_user_info"
            android:textColor="@color/mob_blue"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="28dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/addNameEditTextLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/str_name"
                app:boxBackgroundColor="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/addNameEditText"
                    style="@style/Theme.MobChat.FormEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/addSurnameEditTextLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/str_surname"
                app:boxBackgroundColor="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/addSurnameEditText"
                    style="@style/Theme.MobChat.FormEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/addBirthDateEditTextLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="3dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:focusable="false"
                    android:hint="@string/str_birth_date"
                    android:inputType="none"
                    app:boxBackgroundColor="@color/white">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/addBirthDateEditText"
                        style="@style/Theme.MobChat.FormEditText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:clickable="true"
                        android:focusable="false" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/genderDropdownAutoCompLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="12dp"
                    android:layout_marginLeft="3dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/str_gender"
                    app:boxBackgroundColor="@color/white">

                    <AutoCompleteTextView
                        android:id="@+id/genderDropdownAutoComp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none"
                        android:textSize="18sp" />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/addUserCityEditTextLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/str_city"
                app:boxBackgroundColor="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/addUserCityEditText"
                    style="@style/Theme.MobChat.FormEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/addUserCountryEditTextLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/str_country"
                app:boxBackgroundColor="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/addUserCountryEditText"
                    style="@style/Theme.MobChat.FormEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--<com.google.android.material.textfield.TextInputLayout
                android:id="@+id/countryDropdownAutoCompLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/str_country"
                app:boxBackgroundColor="@color/white">

                <AutoCompleteTextView
                    android:id="@+id/countryDropdownAutoComp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:textSize="18sp" />

            </com.google.android.material.textfield.TextInputLayout>-->

        </LinearLayout>

        <Button
            android:id="@+id/goToThirdUserFormScreenBtn"
            style="@style/Theme.MobChat.NormalButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_weight="1"
            android:text="@string/btn_next_txt"
            app:icon="@drawable/ic_baseline_navigate_next"
            app:iconGravity="textEnd"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>