<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.views.FirstUserFormScreenFragment">

    <data>

        <variable
            name="viewmodel"
            type="br.felipefcosta.mobchat.viewmodels.FirstUserFormScreenFragmentViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:theme="@style/Theme.MobChat.NoActionBar">

        <Button
            android:id="@+id/firstSignUpCloseBtn"
            style="@style/Theme.MobChat.TextButton.IconOnly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:gravity="end"
            app:icon="@drawable/ic_baseline_close"
            app:iconPadding="0dp"
            app:iconSize="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/str_count_info"
            android:textColor="@color/mob_blue"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/firstSignUpCloseBtn" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/addUserNameEditTextLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/str_username"
                app:prefixText="@"
                app:boxBackgroundColor="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/addUserNameEditText"
                    style="@style/Theme.MobChat.FormEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/addEmailEditTextLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/str_email"
                app:boxBackgroundColor="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/addEmailEditText"
                    style="@style/Theme.MobChat.FormEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/addMobileNumberEditTextLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/str_mobile_number"
                app:boxBackgroundColor="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/addMobileNumberEditText"
                    style="@style/Theme.MobChat.FormEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="phone" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/addPasswordEditTextLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/str_password"
                app:boxBackgroundColor="@color/white"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/addPasswordEditText"
                    style="@style/Theme.MobChat.FormEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/addPasswordConfirmEditTextLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/str_confirm_password"
                app:boxBackgroundColor="@color/white"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/addPasswordConfirmEditText"
                    style="@style/Theme.MobChat.FormEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <Button
            android:id="@+id/goToSecondUserFormScreenBtn"
            style="@style/Theme.MobChat.NormalButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_weight="1"
            android:text="@string/btn_create_account"
            app:iconGravity="textEnd"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

       <!-- <ProgressBar
            android:id="@+id/firstUserFormProgressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />-->

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
